# hicart

./: .gitignore  .gitmodules  Makefile  README.md
gateware/: .gitignore  .pdm-python  Makefile  pyproject.toml
gateware/debug/litesdcard/: Makefile
gateware/debug/litesdcard/docs/: trace.txt
gateware/debug/litesdcard/rtl/debug/: top_simple.v  top_tb.v
gateware/debug/litesdcard/scripts/: reset_debug.sh  run_debug.sh  run_gen.sh
gateware/src/ferk_cart/arch/: ecp5pll.py
gateware/src/ferk_cart/debug/: ila.py  serial.py  wishbone.py
gateware/src/ferk_cart/design/: cart.py  flash.py  ila.py  remote.py  uart.py  uart_write.py
gateware/src/ferk_cart/integration/: read.py
gateware/src/ferk_cart/interface/: ft245.py  hyperram.py  hyperram_wishbone.py  qspi_flash.py
gateware/src/ferk_cart/n64/: ad16.py  burst.py  cic.py  pi.py
gateware/src/ferk_cart/soc/: stream.py  wishbone.py
gateware/src/ferk_cart/test/driver/: stream.py  wishbone.py
gateware/src/ferk_cart/utils/: cli.py
gateware/src/hicart/cores/: litesdcard.py
gateware/src/hicart/debug/: ila.py  serial.py  wishbone.py
gateware/src/hicart/design/: cart.py  flash.py  ila.py  remote.py  uart.py  uart_write.py
gateware/src/hicart/integration/: read.py
gateware/src/hicart/interface/: ft245.py  hyperram.py  hyperram_wishbone.py  qspi_flash.py
gateware/src/hicart/n64/: ad16.py  burst.py  cartbus.py  cic.py  pi.py  pi2.py
gateware/src/hicart/soc/: gpio.py  stream.py  wishbone.py
gateware/src/hicart/soc/cpu/: base.py  minerva.py
gateware/src/hicart/soc/periph/: base.py  event.py  gpio.py  sram.py
gateware/src/hicart/test/: __init__.py  cocotb_harness.py  utils.py
gateware/src/hicart/test/cocotb/: __init__.py  accessor.py  harness.py  runner.py
gateware/src/hicart/test/cocotb/driver/: ad16.py
gateware/src/hicart/test/cocotb/emulator/: qspi_flash.py
gateware/src/hicart/test/driver/: ad16.py
gateware/src/hicart/test/emulator/: qspi_flash.py  wishbone.py
gateware/src/hicart/test/pysim/: testcase.py
gateware/src/hicart/test/pysim/driver/: ad16.py  pi.py  wishbone.py
gateware/src/hicart/test/pysim/emulator/: wishbone.py
gateware/src/hicart/test/sim/: qspi_clocker.py
gateware/src/hicart/utils/: cli.py  plat.py
gateware/tests/: test_cocotb.py  test_ferk_cart.py  test_hicart.py
gateware/tests/cocotb/: test_cocotb.py  test_litesdcard.py
gateware/tests/pysim/debug/: test_wishbone.py
gateware/tests/pysim/integration/: test_read.py
gateware/tests/pysim/interface/: test_ft245.py  test_hyperram.py  test_qspi_flash.py
gateware/tests/pysim/n64/: test_ad16.py  test_burst.py  test_cic.py  test_pi.py
gateware/tests/pysim/soc/: test_stream.py  test_wishbone.py
hardware/cart-ecp5/: Display.kicad_sch  Display.sch  FPGA-IO.kicad_sch  FPGA-IO.sch  FPGA-Power.kicad_sch  FPGA-Power.sch  Interface-N64.kicad_sch  Interface-N64.sch  Interface-PMOD.kicad_sch  Interface-PMOD.sch  Interface-USB.kicad_sch  Interface-USB.sch  Memory.kicad_sch  Memory.sch  Power.kicad_sch  Power.sch  cart-ecp5-cache.lib  cart-ecp5-rescue.kicad_sym  (+7 more)
media/: .gitignore  Makefile
roms/: .gitignore
scripts/: run_in_ares.sh  set_power_state.sh
software/: Makefile  Makefile.libdragon
(+158 files in other folders)
