[project]
name = "hicart"
version = "0.1.0"
description = ""
authors = [
    {name = "Nelson Gauthier", email = "nelson.gauthier@gmail.com"}
]

requires-python = "~=3.10"
dependencies = [
    "pyftdi~=0.53.3",
    "setuptools>=67.0",

    # Amaranth HDL
    "amaranth @ git+https://github.com/nelgau/amaranth.git@fix-flipped-signature-create",
    "amaranth-soc @ git+https://github.com/amaranth-lang/amaranth-soc.git@main",
    "amaranth-stdio @ git+https://github.com/amaranth-lang/amaranth-stdio.git@main",
    "amaranth-boards @ git+https://github.com/amaranth-lang/amaranth-boards.git@main",
    "minerva @ git+https://github.com/minerva-cpu/minerva.git@main",
    "luna @ git+https://github.com/greatscottgadgets/luna.git@main",

    # LambdaSoC (heavy transitive dependencies)
    "litex @ git+https://github.com/enjoy-digital/litex.git",
    "litesdcard @ git+https://github.com/enjoy-digital/litesdcard.git",
    "migen @ git+https://github.com/m-labs/migen.git@master",

    # Cosimulation testing dependencies
    "cocotb==1.7.1",
    "cocotb-test @ git+https://github.com/nelgau/cocotb-test.git@master",
    "cocotbext-wishbone @ git+https://github.com/wallento/cocotbext-wishbone@master"
]

[tool.pdm.dev-dependencies]
test = [
    "pytest~=7.1.3"
]

[tool.pdm.resolution.overrides]
# Because amaranth-boards overconstrains to amaranth>=0.3,<0.5
amaranth = "git+https://github.com/nelgau/amaranth.git@fix-flipped-signature-create"
amaranth-soc = "git+https://github.com/amaranth-lang/amaranth-soc.git@c5e1e660"

[tool.pdm.scripts]
test = { cmd = "pytest" }

[tool.pyright]
venvPath = ".venv"
typeCheckingMode = "off"
reportWildcardImportFromLibrary = "none"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
